# gb-emulator

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml
cmake/: CheckCoreBoundary.cmake  CompilerWarnings.cmake  Dependencies.cmake  Sanitizers.cmake
docs/: architecture.md
docs/decisions/: 0001-dmg-only-scope.md  0002-single-threaded-core.md  0003-m-cycle-switch-dispatch.md  0004-expected-and-assert.md  0005-polymorphic-cartridge.md  0006-skip-boot-rom.md  0007-dear-imgui.md  0008-palette-index-framebuffer.md  README.md
roms/: README.md
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  gameboy.cpp  gameboy.hpp
src/frontend/: CMakeLists.txt  app.cpp  app.hpp  window.cpp  window.hpp
tests/: .clang-tidy  CMakeLists.txt
tests/integration/: README.md
tests/unit/: sanity_test.cpp
